--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <style type="text/css">
+    
+.springboot {
+    background: url('img\\spring.png');
+    height: 50px;
+    width: 50px;
+    display: block;
+    /* Other styles here */
+}
+
+  </style>
+
 </head>
 
 <body id="page-top">
@@ -118,7 +130,17 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Siebel CRM Consultant</h3>
-            <div class="subheading mb-3">Cancer Research UK</div>
+            <div class="subheading mb-3">Equinix (Singapore)</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2014 - March 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Siebel CRM Consultant</h3>
+            <div class="subheading mb-3">Cancer Research UK (London)</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2011 - August 2011</span>
@@ -227,6 +249,9 @@
           </li>
            <li class="list-inline-item">
             <i class="fab fa-java"></i>
+          </li>
+           <li class="list-inline-item">
+            <img src="img\spring.png">
           </li>
         </ul>
 
