--- a/index.html
+++ b/index.html
@@ -94,13 +94,19 @@
         <h1 class="mb-0">Ashwin
           <span class="text-primary">Narayanan</span>
         </h1>
-        <div class="subheading mb-5">Hagalundsgatan 18 · Solna, Stockholm 16963 · (+46) 762713993 ·
+        <div class="subheading mb-5">Månstorpsvägen 5 · Tullinge, Stockholm 14645 · (+46) 762713993 ·
           <a href="mailto:name@email.com">ashwinnarayanan09@gmail.com</a>
         </div>
         <p class="lead mb-5">I am an Electronics and Telecommunications Engineer with more than 11 years of experience in IT telecom industry.
           <br> 
-          I have worked in all phases of SDLC (Software Development Life Cycle), mainly as Frontend (React, Angular), Backend (Java), PLSQL & Siebel CRM developer, and with large telecom clients like 3 Sverige, Com Hem, Tele2 & British Telecom. <br>
+          I have worked in all phases of SDLC (Software Development Life Cycle), mainly as Frontend (React, Angular), Backend (Java, Springboot), PLSQL & Siebel CRM developer, and with large telecom clients like 3 Sverige, Com Hem, Tele2 & British Telecom. <br>
           I am motivated, focused, hard-working, purposeful, social, and result-oriented individual.
+
+          I like to develop web and android apps in my free time. My cuurent projects are:
+
+          https://www.tullingeberg.se - Angular application with Firbase as backend.
+
+          Tullingeberg - Android application
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ashwin-narayanan-a2877521/">
