--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
           I have worked in all phases of SDLC (Software Development Life Cycle), mainly as Frontend (React, Angular), Backend (Java, Springboot), PLSQL & Siebel CRM developer, and with large telecom clients like 3 Sverige, Com Hem, Tele2 & British Telecom. <br>
           I am motivated, focused, hard-working, purposeful, social, and result-oriented individual.
 
-          I like to develop web and android apps in my free time. My cuurent projects are:
+          I like to develop web and android apps in my free time. My current projects are: <br>
 
-          https://www.tullingeberg.se - Angular application with Firbase as backend.
+          <u>Web Application</u>
+          https://www.tullingeberg.se - Angular application with Firbase as backend.<br>
 
+          <u>Android application</u> 
           Tullingeberg - Android application
         </p>
         <div class="social-icons">
