--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
           I like to develop web and android apps in my free time. My current projects are: <br>
 
-          <u>Web Application</u>
-          https://www.tullingeberg.se - Angular application with Firbase as backend.<br>
+          <u>Web Application</u><br>
+          <a href="https://www.tullingeberg.se">https://www.tullingeberg.se</a> - Angular application with Firbase as backend.<br>
 
-          <u>Android application</u> 
+          <u>Android application</u> <br>
           Tullingeberg - Android application
         </p>
         <div class="social-icons">
