--- a/index.html
+++ b/index.html
@@ -97,18 +97,72 @@
         <div class="subheading mb-5">Månstorpsvägen 5 · Tullinge, Stockholm 14645 · (+46) 762713993 ·
           <a href="mailto:name@email.com">ashwinnarayanan09@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am an Electronics and Telecommunications Engineer with more than 11 years of experience in IT telecom industry.
-          <br> 
-          I have worked in all phases of SDLC (Software Development Life Cycle), mainly as Frontend (React, Angular), Backend (Java, Springboot), PLSQL & Siebel CRM developer, and with large telecom clients like 3 Sverige, Com Hem, Tele2 & British Telecom. <br>
-          I am motivated, focused, hard-working, purposeful, social, and result-oriented individual.
+        <p style="word-wrap: normal;white-space:pre-wrap;" class="lead mb-5">
+I am an Electronics and Telecommunications Engineer with more than 11 years of experience in IT telecom industry.
 
-          I like to develop web and android apps in my free time. My current projects are: <br>
+I am a certified CRM Consultant ( Siebel & SalesForce) and a Full Stack Developer(Angular , Java & Plsql)having 11+ years of work experience in IT.
 
-          <u>Web Application</u><br>
-          <a href="https://www.tullingeberg.se">https://www.tullingeberg.se</a> - Angular application with Firbase as backend.<br>
+Currently working on Payment Gateway System developed in Java/Springboot that handles payments from various external partners in Sweden & Denmark. The frontend is being built in React/Redux and Typescript.
 
-          <u>Android application</u> <br>
-          Tullingeberg - Android application
+Also working on Credit Check System.
+
+Was part of the team that developed a Billing Application using Angular 7 (TypeScript), Spring Boot framework(Java) & Oracle Database.
+
+I have worked on various DevOps tools like Jenkins , git ,puppet & have knowledge of docker , kubernetes etc.
+
+I have setup various applications & hosted websites on Google Cloud & AWS instances.
+
+I have previously worked on various complex Siebel CRM implementations in various domains (Telecom,Pharma & Finance) around the world.
+
+I am a result driven team player with excellent technical skills.I like learning new technologies & exploring new things.
+
+Currently working at a Swedish telecom client as a Java developer.
+
+Technical skills:
+
+• Backend - Java , Spring Framework, Apache Camel,SQL, Hasura/GraphQL
+
+• Mobile App development - Android & React Native
+
+• COTS - Open CRM , Siebel CRM
+
+• Cloud - AWS, Google Cloud Platform, Firebase, Private Cloud
+
+• Database - Postgress,MySQL, Oracle
+
+• DevOps - Git,Jenkins ,Ansible, Puppet ,Maven Docker ,Kubernetes ,Linux Containers (LXD)
+
+• Frontend - React, Angular JS, Angular , Botstrap 4 ,CSS 3 JavaScript, HTML 5 , Typescript
+
+. Messaging - ActiveMQ
+
+• OS - Debian, Linux , Ubuntu, Windows
+
+• PaaS - Force.com
+
+• SaaS - SalesForce.com
+
+• Testing - JUnit, Mockito
+
+• Knowledge of - Django,MongoDB, Python, Selenium
+
+Personal Projects :
+www.tullingeberg.se - web app using Angular & Firebase
+Tullingeberg - Android app using React Native
+
+
+Language Skills:
+
+I can read,write & speak basic Swedish & I am constantly trying to improve my Swedish skills at home & workplace.
+A2 level German Language Certified from Max Muller Pune.
+
+I like to develop web and android apps in my free time. My current projects are: <br>
+
+<u>Web Application</u><br>
+<a href="https://www.tullingeberg.se">https://www.tullingeberg.se</a> - Angular application with Firbase as backend.<br>
+
+<u>Android application</u> <br>
+Tullingeberg - Android application
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ashwin-narayanan-a2877521/">
