--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ A2 level German Language Certified from Max Muller Pune.
 I like to develop web and android apps in my free time. My current projects are: <br>
 
 <u>Web Application</u><br>
-<a href="https://www.tullingeberg.se">https://www.tullingeberg.se</a> - Angular application with Firbase as backend.<br>
+<a href="https://www.tullingeberg.se">https://www.tullingeberg.se</a> - Angular application with Firebase as backend.<br>
 
 <u>Android application</u> <br>
 Tullingeberg - Android application
